Changelog
=========

after
-----

- Allow the cart portlet in the left column too.
  [fRiSi]
  
  
0.1
---

- initial release