@@ -3,12 +3,12 @@
            xmlns:i18n="http://namespaces.zope.org/i18n">
 
   <i18n:registerTranslations directory="locales" />
-  
+
   <include package="plone.app.portlets" />
   <include package="bda.plone.ajax" />
 
   <include file="profiles.zcml" />
-  
+
   <include package=".browser" />
-  
+
 </configure>
