@@ -6,8 +6,9 @@ after
 
 - Allow the cart portlet in the left column too.
   [fRiSi]
-  
-  
+- Add adapter for cart item preview images
+  [petschki]
+
 0.1
 ---
 
